tests/baselines/reference/declarationEmitAliasFromIndirectFile.errors.txt
tests/cases/compiler/app.ts(3,16): error TS2503: Cannot find namespace 'fp'.


==== tests/cases/compiler/locale.d.ts (0 errors) ====
    export type Locale = {
        weekdays: {
            shorthand: [string, string, string, string, string, string, string];
            longhand: [string, string, string, string, string, string, string];
        };
    };
    export type CustomLocale = {
        weekdays: {
            shorthand: [string, string, string, string, string, string, string];
            longhand: [string, string, string, string, string, string, string];
        };
    };
    export type key = "ar" | "bg";
    
==== tests/cases/compiler/instance.d.ts (0 errors) ====
    import { Locale, CustomLocale, key as LocaleKey } from "./locale";
    export interface FlatpickrFn {
        l10ns: {[k in LocaleKey]?: CustomLocale } & { default: Locale };
    }
    
==== tests/cases/compiler/app.ts (1 errors) ====
    import { FlatpickrFn } from "./instance";
    const fp = { l10ns: {} } as FlatpickrFn;
    export default fp.l10ns;
                   ~~
!!! error TS2503: Cannot find namespace 'fp'.
    